--- a/fittrackee_client/src/locales/fr/workouts.json
+++ b/fittrackee_client/src/locales/fr/workouts.json
@@ -2,6 +2,7 @@
   "Workouts": "Séances",
   "Workout": "Séance",
   "Workout Date": "Date de l'séance",
+  "Map": "Carte",
   "Add a workout": "Ajouter une séance",
   "Are you sure you want to delete this workout?": "Etes-vous sûr de vouloir supprimer cette séance ?",
   "Ave. speed": "Vitesse moyenne",
