--- a/fittrackee_client/src/locales/enUS/workouts.json
+++ b/fittrackee_client/src/locales/enUS/workouts.json
@@ -2,6 +2,7 @@
   "Workouts": "Workouts",
   "Workout": "Workout",
   "Workout Date": "Workout Date",
+  "Map": "Map",
   "Add a workout": "Add a workout",
   "Are you sure you want to delete this workout?": "Are you sure you want to delete this workout?",
   "Ave. speed": "Ave. speed",
