--- a/fittrackee_client/src/locales/en/workouts.json
+++ b/fittrackee_client/src/locales/en/workouts.json
@@ -41,6 +41,7 @@
   "PREVIOUS_SEGMENT": "Previous segment",
   "PREVIOUS_WORKOUT": "Previous workout",
   "RECORD": "record | records",
+  "RECORD_AC": "Highest ascent",
   "RECORD_AS": "Ave. speed",
   "RECORD_FD": "Farest distance",
   "RECORD_LD": "Longest duration",
