--- a/fittrackee_client/src/locales/fr/workouts.json
+++ b/fittrackee_client/src/locales/fr/workouts.json
@@ -41,9 +41,9 @@
   "PREVIOUS_SEGMENT": "Segment précédent",
   "PREVIOUS_WORKOUT": "Séance précédente",
   "RECORD": "record | records",
-  "RECORD_AC": "dénivelé le plus positif",
   "RECORD_AS": "Vitesse moy.",
   "RECORD_FD": "Distance la + longue",
+  "RECORD_HA": "dénivelé le plus positif",
   "RECORD_LD": "Durée la + longue",
   "RECORD_MS": "Vitesse max.",
   "REMAINING_CHARS": "nombre de caractères restants ",
