--- a/fittrackee_client/src/locales/en/workouts.json
+++ b/fittrackee_client/src/locales/en/workouts.json
@@ -41,9 +41,9 @@
   "PREVIOUS_SEGMENT": "Previous segment",
   "PREVIOUS_WORKOUT": "Previous workout",
   "RECORD": "record | records",
-  "RECORD_AC": "Highest ascent",
   "RECORD_AS": "Ave. speed",
   "RECORD_FD": "Farest distance",
+  "RECORD_HA": "Highest ascent",
   "RECORD_LD": "Longest duration",
   "RECORD_MS": "Max. speed",
   "REMAINING_CHARS": "remaining characters",
